@@ -43,7 +43,6 @@
 #ifndef _REGEX_H_
 #define	_REGEX_H_
 
-#include <sys/cdefs.h>
 #include <sys/types.h>
 
 /* types */
@@ -99,12 +98,9 @@ typedef struct {
 #define	REG_LARGE	01000	/* force large representation */
 #define	REG_BACKR	02000	/* force use of backref code */
 
-__BEGIN_DECLS
-int	regcomp __P((regex_t *, const char *, int));
-size_t	regerror __P((int, const regex_t *, char *, size_t));
-int	regexec __P((const regex_t *,
-	    const char *, size_t, regmatch_t [], int));
-void	regfree __P((regex_t *));
-__END_DECLS
+int	regcomp(regex_t*, const char*, int);
+size_t	regerror(int, const regex_t*, char*, size_t);
+int	regexec(const regex_t*, const char*, size_t, regmatch_t[], int);
+void	regfree(regex_t*);
 
 #endif /* !_REGEX_H_ */
